# pydantic-ai-domain-agent

./: domain_agent.py  pyproject.toml
